--- a/History.html
+++ b/History.html
@@ -416,10 +416,11 @@ text-align: center; /* Centers text horizontally */
 
 </p>
 
-
+<div class="centered">
 <h5> Carl Linnaeus’s Systema Naturae </h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kVD6PP61A28?si=iPaVXE-V1rEXIYmB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+</div>
+  
 <div class="split left">
   <div class="centered">
 <h5> Linnean Lens: Carl Linnaeus' Species Plantarum and Naming Nature </h5>
@@ -427,9 +428,11 @@ text-align: center; /* Centers text horizontally */
   </div>
 </div>
 
+  <div class="centered">
 <h5> Linnean Lens: Carl Linnaeus' Student Manuscript </h5>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/L6ZMtdOuZNo?si=5LBhvgTMzmeO60Ee" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<div class="split right">
+  </div>
+    <div class="split right">
   <div class="centered">
 
   </div>
@@ -492,4 +495,5 @@ div.scroll-container img {
 
 </body>
 </html>
+
 
